fix: z-index for header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 
 .header {
   @include flex(row, center, center, nowrap);
-  z-index: 3;
+  z-index: 4;
   height: 40px;
   width: 100%;
   background-color: $bcgSecond;
